# no-entry-recognition

./: .gitignore  CMakeLists.txt  README.md
myproject/: CMakeLists.txt  main.cpp
